--- a/src/material/core/theming/_definition.scss
+++ b/src/material/core/theming/_definition.scss
@@ -40,7 +40,7 @@ $theme-version: 1;
   $type: map.get($config, theme-type) or light;
   $primary: map.get($config, primary) or palettes.$violet-palette;
   $tertiary: map.get($config, tertiary) or $primary;
-  $use-sys-vars: map.get($config, use-system-variables) or false;
+  sass-utils.$use-system-color-variables: map.get($config, use-system-variables) or false;
 
   @return (
     $internals: (
@@ -55,7 +55,7 @@ $theme-version: 1;
         error: map.get($primary, error),
       ),
       color-tokens: m3-tokens.generate-color-tokens(
-          $type, $primary, $tertiary, map.get($primary, error), $use-sys-vars)
+          $type, $primary, $tertiary, map.get($primary, error))
     )
   );
 }
@@ -74,7 +74,7 @@ $theme-version: 1;
   $bold: map.get($config, bold-weight) or 700;
   $medium: map.get($config, medium-weight) or 500;
   $regular: map.get($config, regular-weight) or 400;
-  $use-sys-vars: map.get($config, use-system-variables) or false;
+  sass-utils.$use-system-typography-variables: map.get($config, use-system-variables) or false;
 
   @return (
     $internals: (
@@ -87,7 +87,7 @@ $theme-version: 1;
         regular: $regular,
       ),
       typography-tokens: m3-tokens.generate-typography-tokens(
-          $brand, $plain, $bold, $medium, $regular, $use-sys-vars)
+          $brand, $plain, $bold, $medium, $regular)
     )
   );
 }
@@ -102,7 +102,6 @@ $theme-version: 1;
   }
 
   $density-scale: map.get($config, scale) or 0;
-  $use-sys-vars: map.get($config, use-system-variables) or false;
 
   @return (
     $internals: (
